--- a/src/assets/scss/components/_spotlight.scss
+++ b/src/assets/scss/components/_spotlight.scss
@@ -30,7 +30,7 @@
 			margin-left: 4em;
 			padding: 0.65em;
 			border-radius: 100%;
-			border: solid 1px;
+			border: solid 10px;
 
 			img {
 				display: block;
@@ -80,7 +80,7 @@
 	@mixin color-spotlight($p: null) {
 		.spotlight {
 			.image {
-				border-color: _palette($p, border);
+				border-color: _palette($p, fg-bold);
 			}
 		}
 	}
