--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -27,7 +27,7 @@
 			margin: (_size(element-margin) * 1.25) 0 _size(element-margin) 0;
 			font-size: 0.8em;
 			text-align: center;
-			color: _palette(invert, border2-bg )
+			color: _palette(invert, fg )
 		}
 
 		@include breakpoint(large) {
