--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -38,7 +38,7 @@
 		border2-bg:			rgba(255,255,255,0.2),
 
 		invert: (
-			bg:				#ffffff,
+			bg:				rgba(255,255,255,0.5),
 			bg-alt:			#000000,
 			fg:				#000000,
 			fg-bold:		#E81D2C,
